# messaging

./: apiInjector.js
client/: Cargo.toml
client/src/: main.rs
queue/: Cargo.toml
queue/src/: lib.rs  main.rs  message.rs  queue.rs  register.rs  routes.rs  state.rs
queue/src/routes/: message.rs  queue.rs
