[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.1", features = ["add-extension", "auth", "compression-full", "limit", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuidv7 = "0.1.7"
